--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,71 +1,123 @@
-.nav,
-.nav-list {
-    display: flex;
-    margin-right: auto;
+.nav {
+    margin-bottom: 60px;
 }
 
 .nav-list-item {
-    position: relative;
-
-    &:not(:last-child) {
-        margin-right: 50px;
-    }
+    
+        &:not(:last-child) {
+            margin-bottom: 40px;
+        }
 }
 
 .nav-list-item-link {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    height: 81px;
 
-    color: $primary-text-color;
+        display: inline-block;
+        position: relative;
+        padding-bottom: 8px;
 
-    @include font-style(500, $base-font-size, 1.14, 0.02em);
-
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus {
-        color: $accent-color;
-    }
-
-    &::after {
-
-        @include pseudo;
-        
-        bottom: 0px;
-        width: 100%;
-        height: 4px;
-        
-        
-        background-color: $accent-color;
-        border-radius: 2px;
+        color: $primary-text-color;
+        @include font-style(500, 18px, 1.17, 0.02em);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
-        transform: scaleX(0);
-        opacity: 0;
-        transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    &:hover::after {
-        transform: scaleX(1);
-        opacity: 1;
-    }
-}
-
-.current {
-    color: $accent-color;
-
-    &::after {
-        @include pseudo;
-
-        bottom: 0;
-        width: 100%;
-        height: 4px;
-        
-        background-color: $accent-color;
-        border-radius: 2px;
+        &:hover,
+        &:focus {
+            color: $accent-color;
+        }
     
-        transform: scaleX(1);  
-        opacity: 1;
+        &::after {
+    
+            @include pseudo;
+            
+            bottom: 0px;
+            margin: 0 auto;
+            width: 100%;
+            height: 4px;  
+            
+            background-color: $accent-color;
+            border-radius: 2px;
         
+            transform: scaleX(0);
+            opacity: 0;
+            transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    
+        &:hover::after {
+            transform: scaleX(1);
+            opacity: 1;
+        }
     }
-}
+
+    .current {
+            color: $accent-color;
+        
+            &::after {
+                @include pseudo;
+        
+                bottom: 0;
+                width: 100%;
+                height: 4px;
+                
+                background-color: $accent-color;
+                border-radius: 2px;
+            
+                transform: scaleX(1);  
+                opacity: 1;
+                
+            }
+        }
+
+
+// .nav,
+// .nav-list {
+//     display: flex;
+//     margin-right: auto;
+// }
+
+// .nav-list-item {
+//     position: relative;
+
+//     &:not(:last-child) {
+//         margin-right: 50px;
+//     }
+// }
+
+// .nav-list-item-link {
+//     padding-top: 32px;
+//     padding-bottom: 32px;
+//     height: 81px;
+
+//     color: $primary-text-color;
+
+//     @include font-style(500, $base-font-size, 1.14, 0.02em);
+
+//     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//     &:hover,
+//     &:focus {
+//         color: $accent-color;
+//     }
+
+//     &::after {
+
+//         @include pseudo;
+        
+//         bottom: 0px;
+//         width: 100%;
+//         height: 4px;
+        
+        
+//         background-color: $accent-color;
+//         border-radius: 2px;
+    
+//         transform: scaleX(0);
+//         opacity: 0;
+//         transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//     }
+
+//     &:hover::after {
+//         transform: scaleX(1);
+//         opacity: 1;
+//     }
+// }
+
+// 
