--- a/css/main.css
+++ b/css/main.css
@@ -53,49 +53,98 @@ body {
 }
 
 .container {
-  width: 1200px;
-  padding-top: 94px;
+  padding-top: 60px;
   padding-right: 15px;
-  padding-bottom: 94px;
+  padding-bottom: 60px;
   padding-left: 15px;
   margin-left: auto;
   margin-right: auto;
 }
 
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
 .header .container {
-  display: flex;
-  justify-content: flex-start;
-  align-items: stretch;
   padding-top: 0px;
   padding-bottom: 0px;
 }
 
-.portfolio {
-  border-bottom: 1px solid #ECECEC;
-}
-
-.nav,
-.nav-list {
+.logo-menu-wrapper {
   display: flex;
-  margin-right: auto;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.nav-list-item {
-  position: relative;
+.menu-button {
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
+
+.icon-close {
+  display: none;
+}
+
+.menu-button.is-open .icon-close {
+  display: block;
+}
+
+.menu-button.is-open .icon-burger {
+  display: none;
+}
+
+.nav-contacts-wrapper {
+  opacity: 0;
+  transform: translateY(-100%);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  pointer-events: none;
+  margin-right: -15px;
+  margin-left: -15px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  text-align: center;
+  border-top: 1px solid #ECECEC;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+}
+
+.nav-contacts-wrapper.is-open {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.nav {
+  margin-bottom: 60px;
 }
 
 .nav-list-item:not(:last-child) {
-  margin-right: 50px;
+  margin-bottom: 40px;
 }
 
 .nav-list-item-link {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  height: 81px;
+  display: inline-block;
+  position: relative;
+  padding-bottom: 8px;
   color: #212121;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 18px;
+  line-height: 1.17;
   letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -109,6 +158,7 @@ body {
   position: absolute;
   content: "";
   bottom: 0px;
+  margin: 0 auto;
   width: 100%;
   height: 4px;
   background-color: #2196F3;
@@ -144,15 +194,14 @@ body {
   color: #212121;
   font-family: "Raleway";
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
 }
 
-.nav .logo {
-  margin-top: 24px;
-  margin-right: 85px;
-  margin-bottom: 25px;
+.logo-menu-wrapper .logo {
+  margin-top: 16px;
+  margin-bottom: 16px;
 }
 
 .logo-web {
@@ -164,16 +213,10 @@ body {
   color: #ffffff;
   font-family: Raleway;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: none;
-}
-
-.contact-us {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
 }
 
 .contact-us .icon {
@@ -183,7 +226,7 @@ body {
 }
 
 .contact-us-item:not(:last-child) {
-  margin-right: 30px;
+  margin-bottom: 16px;
 }
 
 .icon.envelope {
@@ -192,12 +235,12 @@ body {
 
 .contact-us-email,
 .contact-us-phone {
-  display: flex;
+  display: center;
   justify-content: flex-start;
   align-items: stretch;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 18px;
+  line-height: 1.17;
   letter-spacing: 0.02em;
   color: #757575;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
