--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,9 +1,26 @@
 .container {
-    width: $container-width;
-    padding-top: $container-padding-y;
-    padding-right: $container-padding-x;
-    padding-bottom: $container-padding-y;
-    padding-left: $container-padding-x;
+    padding-top: 60px;
+    padding-right: 15px;
+    padding-bottom: 60px;
+    padding-left: 15px;
     margin-left: auto;
     margin-right: auto;
+
+    @media screen and (min-width: 480px) {
+        width: 480px;
+
+    }
+
+    @media screen and (min-width: 768px) {
+        width: 768px;
+
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 1200px;
+        padding-top: 94px;
+        padding-bottom: 94px;
+
+    }
+
 }
