--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,12 +1,11 @@
 .logo {
     color: $primary-text-color;
     font-family: "Raleway";
-    @include font-style(700, 26px, 1.19, $base-letter-spacing);
+    @include font-style(700, 24px, 1.17, $base-letter-spacing);
 
-    .nav & {
-        margin-top: 24px;
-        margin-right: 85px;
-        margin-bottom: 25px;
+    .logo-menu-wrapper & {
+        margin-top: 16px;
+        margin-bottom: 16px;
     }
 }
 
@@ -19,6 +18,6 @@
     margin-bottom: 20px;
     color: $dark-section-text-color;
     font-family: Raleway;
-    @include font-style(700, 26px, 1.19, $base-letter-spacing);
+    @include font-style(700, 24px, 1.17, $base-letter-spacing);
     text-transform: none;
 }
