--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,7 @@ body {
   border: none;
   outline: none;
   background-color: transparent;
+  cursor: pointer;
 }
 
 .icon-close {
@@ -111,15 +112,15 @@ body {
 }
 
 .nav-contacts-wrapper {
-  opacity: 0;
-  transform: translateY(-100%);
-  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  pointer-events: none;
   margin-right: -15px;
   margin-left: -15px;
   padding-top: 60px;
   padding-bottom: 60px;
   text-align: center;
+  opacity: 0;
+  transform: translateY(-100%);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  pointer-events: none;
   border-top: 1px solid #ECECEC;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
 }
