--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,60 +1,91 @@
 .header {
     .container {
-        @include container-padding($padding-top: 0px, $padding-bottom: 0px)
+        @include container-padding($padding-top: 0px, $padding-bottom: 0px);
+        position: relative;
+
+        @media screen and (min-width: 768px) {
+            @include container-flex(flex, space-between, center);
+        }
     }
 
-}
-
-.logo-menu-wrapper {
-    @include container-flex(flex, space-between, center);
 }
 
 .menu-button {
-    border: none;
-    outline: none;
-    background-color: transparent;
-    cursor: pointer;
-}
-
-.icon-close {
-    display: none; 
-
-    .menu-button.is-open & {
-        display: block;
-    }
-}
-
-.menu-button.is-open .icon-burger {
     display: none;
 }
 
+@media screen and (max-width: 767px) {
+    .logo-menu-wrapper {
+        @include container-flex(flex, space-between, center);
+    }
+
+    .menu-button {
+        display: block;
+        border: none;
+        outline: none;
+        background-color: transparent;
+        cursor: pointer;
+    }
+    
+    .icon-close {
+        display: none; 
+    
+        .menu-button.is-open & {
+            display: block;
+        }
+    
+        .menu-button:hover & {
+            fill: $accent-color;
+        }
+    }
+    
+    .icon-burger {
+        .menu-button.is-open & {
+            display: none;
+        }
+    
+        .menu-button:hover & {
+            fill: $accent-color;
+        }    
+    }
+    
+    .nav-contacts-wrapper {
+        position: absolute;
+        z-index: 10;
+        width: 100%;
+        margin-right: -15px;
+        margin-left: -15px;
+        padding-top: 60px;
+        padding-bottom: 60px;
+        text-align: center;
+    
+        opacity: 0;
+        transform: translateY(-100%);
+        transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        pointer-events: none;
+
+        background-color: $primary-bg-color;
+    
+        border-top: 1px solid #ECECEC;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+    
+        &.is-open {
+            opacity: 1;
+            transform: translateY(0);
+            pointer-events: auto;
+        }
+    }
+
+}
 
 .nav-contacts-wrapper {
-
-    margin-right: -15px;
-    margin-left: -15px;
-    padding-top: 60px;
-    padding-bottom: 60px;
-    text-align: center;
-
-    opacity: 0;
-    transform: translateY(-100%);
-    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    pointer-events: none;
-
-    border-top: 1px solid #ECECEC;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
-
-    &.is-open {
-        opacity: 1;
-        transform: translateY(0);
+    @media screen and (min-width: 768px) {
+        @include container-flex;
     }
 }
 
-// .portfolio {
-//     border-bottom: 1px solid #ECECEC;
-// }
-
-// @include container-flex($display: flex);
+.portfolio {
+    border-bottom: 1px solid #ECECEC;
+}
 
 
