--- a/sass/components/_contact-us.scss
+++ b/sass/components/_contact-us.scss
@@ -10,6 +10,10 @@
 
 .contact-us-item:not(:last-child) {
     margin-bottom: 16px;
+
+    @media screen and (min-width: 768px) {
+        margin-bottom: 10px;
+    }
 }
 
 .icon.envelope {
@@ -39,40 +43,37 @@
     &:focus .icon {
         fill: $accent-color;
     }
+
+    @media screen and (min-width: 768px) {
+        @include font-style(500, 14px, 1.14, 0.02em);
+    }
 }
 
 
-// .contact-us {
-//     @include container-flex(flex, flex-start, center);
 
-// }
+.contact-us {
+    @media screen and (min-width: 768px) {
+        @include container-flex;
+        flex-direction: column;
+
+        padding-top: 21px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        flex-direction: row;
+        align-items: center;
+        padding-top: 0px;
+
+        .contact-us-item:not(:last-child) {
+                margin-right: 30px;
+                margin-bottom: 0px;
+            }
+    }
+
+}
 
 // .contact-us-item:not(:last-child) {
 //     margin-right: 30px;
 // }
 
 
-// .contact-us-email,
-// .contact-us-phone {
-//     @include container-flex;
-//     @include font-style(500, $base-font-size, 1.14, 0.02em);
-
-//     color: $secondary-text-color;
-//     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-//     &:hover {
-//         color: $accent-color;
-//     }
-
-//     &:focus {
-//         color: $accent-color;
-//     }
-
-//     &:hover .icon {
-//         fill: $accent-color;
-//     }
-
-//     &:focus .icon {
-//         fill: $accent-color;
-//     }
-// }
