--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,123 +1,98 @@
-.nav {
-    margin-bottom: 60px;
+@media screen and (max-width: 767px) {
+    .nav {
+        margin-bottom: 60px;
+    }
+
+    .nav-list-item:not(:last-child) {
+            margin-bottom: 40px;
+        }
+
+    .nav-list-item-link {
+        display: inline-block;
+        padding-bottom: 8px;
+        @include font-style(500, 18px, 1.17, 0.02em);
+    }
+}
+
+.nav-list {
+    @media screen and (min-width: 768px) {
+        @include container-flex;
+        align-items: center;
+        margin-right: 84px; 
+    }
+
+    @media screen and (min-width: 1200px) {
+        margin-right: 305px; 
+    }
 }
 
 .nav-list-item {
-    
+    @media screen and (min-width: 768px) {
+        position: relative;
+
         &:not(:last-child) {
-            margin-bottom: 40px;
-        }
+            margin-right: 50px;
+        }  
+    }
 }
 
 .nav-list-item-link {
-
-        display: inline-block;
-        position: relative;
-        padding-bottom: 8px;
-
-        color: $primary-text-color;
-        @include font-style(500, 18px, 1.17, 0.02em);
-        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: relative;
     
-        &:hover,
-        &:focus {
-            color: $accent-color;
-        }
+    color: $primary-text-color;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        color: $accent-color;
+    }
+
+    &::after {
+
+        @include pseudo;
+        
+        bottom: 0px;
+        margin: 0 auto;
+        width: 100%;
+        height: 4px;  
+        
+        background-color: $accent-color;
+        border-radius: 2px;
+    
+        transform: scaleX(0);
+        opacity: 0;
+        transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &:hover::after {
+        transform: scaleX(1);
+        opacity: 1;
+    }
+
+    @media screen and (min-width: 768px) {
+        display: block;
+        padding-top: 32px;
+        padding-bottom:  32px;
+        @include font-style(500, 14px, 1.14, 0.02em);
+    }
+}
+
+.current {
+        color: $accent-color;
     
         &::after {
-    
             @include pseudo;
-            
-            bottom: 0px;
-            margin: 0 auto;
+    
+            bottom: 0;
             width: 100%;
-            height: 4px;  
+            height: 4px;
             
             background-color: $accent-color;
             border-radius: 2px;
         
-            transform: scaleX(0);
-            opacity: 0;
-            transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        }
-    
-        &:hover::after {
-            transform: scaleX(1);
+            transform: scaleX(1);  
             opacity: 1;
+            
         }
     }
 
-    .current {
-            color: $accent-color;
-        
-            &::after {
-                @include pseudo;
-        
-                bottom: 0;
-                width: 100%;
-                height: 4px;
-                
-                background-color: $accent-color;
-                border-radius: 2px;
-            
-                transform: scaleX(1);  
-                opacity: 1;
-                
-            }
-        }
-
-
-// .nav,
-// .nav-list {
-//     display: flex;
-//     margin-right: auto;
-// }
-
-// .nav-list-item {
-//     position: relative;
-
-//     &:not(:last-child) {
-//         margin-right: 50px;
-//     }
-// }
-
-// .nav-list-item-link {
-//     padding-top: 32px;
-//     padding-bottom: 32px;
-//     height: 81px;
-
-//     color: $primary-text-color;
-
-//     @include font-style(500, $base-font-size, 1.14, 0.02em);
-
-//     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-//     &:hover,
-//     &:focus {
-//         color: $accent-color;
-//     }
-
-//     &::after {
-
-//         @include pseudo;
-        
-//         bottom: 0px;
-//         width: 100%;
-//         height: 4px;
-        
-        
-//         background-color: $accent-color;
-//         border-radius: 2px;
-    
-//         transform: scaleX(0);
-//         opacity: 0;
-//         transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-//     }
-
-//     &:hover::after {
-//         transform: scaleX(1);
-//         opacity: 1;
-//     }
-// }
-
-// 
