--- a/sass/components/_application-form.scss
+++ b/sass/components/_application-form.scss
@@ -5,8 +5,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-  
-      width: 528px;
+
+      width: 450px;
       margin-right: auto;
       margin-left: auto;
       padding: 40px;
@@ -18,14 +18,16 @@
       transform: scale(1);
       transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+      @media screen and (min-width: 1200px) {
+        width: 528px; 
+      }
+
   }
   
   .backdrop.is-hidden .application-form {
       transform: scale(0.9);
   }
-  
-  
-  
+   
   .application-form-title {
       margin-bottom: 30px;
   
@@ -70,20 +72,18 @@
     
       .application-form-close:focus & {
         fill: $accent-color;
-    }
-    
+    }   
   }
-  
-  
+   
   .application-form-input-wrapper {
       position: relative;
-  
       margin-bottom: 28px;
+      width: 100%;
   }
   
   .application-form-input,
   .application-form-comment {
-      width: 448px;
+      width: 100%;
       height: 40px;
   
       font-family: Roboto;
