--- a/sass/components/_filters.scss
+++ b/sass/components/_filters.scss
@@ -8,13 +8,30 @@
     
         box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.1);
         border-radius: 4px;
-    }   
+    }  
 }
 
 .gallery-filters-item:not(:last-child) {
     margin-right: 8px;
+
 }
 
+@media screen and (max-width: 1199px) {
+    .gallery-filters {
+        margin-bottom: 30px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .gallery-filters {
+        margin-bottom: 40px;
+        @include container-flex($justify-content: flex-start);
+        flex-wrap: wrap;
+    }
+    .gallery-filters-item:nth-child(-n + 3) {
+        margin-bottom: 15px;
+    }
+}
 
 .gallery-filters-item-btn {
     @include container-flex;
