--- a/sass/components/_subscribe-form.scss
+++ b/sass/components/_subscribe-form.scss
@@ -1,28 +1,45 @@
 .subscribe-form-wrapper {
     @include container-flex;
-    margin-top: 20px;
+    flex-direction: column;
+    align-items: center;
+
+    @media screen and (min-width: 1200px) {
+        flex-direction: row;
+    }
 }
 
 .subscribe {
-    max-width: 570px;
     flex-grow: 2;
+    @media screen and (min-width: 1200px) {
+        max-width: 570px;
+    }    
 }
 
 
 .subscribe-email {
-    flex-grow: 2;
-    margin-right: 12px;
-    padding-left: 16px;
+    width: 100%;
+    padding: 15px 16px;
+    margin-bottom: 20px;
 
     background-color: transparent;
     color: $dark-section-text-color;
+    font-size: 16px;
 
     border: 1px solid rgba(255, 255, 255, 0.3);
     box-sizing: border-box;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
-}
 
+    @media screen and (min-width: 768px) {
+        width: 450px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        margin-right: 12px;
+        margin-bottom: 0px;
+    }
+    
+}
 
 .icon-send {
     margin-left: 10px;
