--- a/sass/components/_works-collection.scss
+++ b/sass/components/_works-collection.scss
@@ -1,33 +1,21 @@
 
 
-.gallery-works {
-    @include container-flex;
-    flex-wrap: wrap;
-}
-
 .gallery-works-box {
-    width: calc((100% - 60px) / 3);
-
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover {
         box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
     }
 
-    &:not(:nth-child(3n + 3)) {
-        margin-right: 30px;
+    @media screen and (max-width: 1199px) {
+        &:not(:last-child) {
+            margin-bottom: 30px;
+        } 
     }
-
-    &:not(:nth-last-child(-n + 3)) {
-        margin-bottom: 30px;
-    }
-
 }
-
 
 .gallery-works-thumb {
     position: relative;
-
     overflow: hidden;
 }
 
@@ -97,4 +85,59 @@
 
     font-size: 18px;
     line-height: 1.56;
+}
+
+.gallery-image-thumb {
+    width: 450px;
+    height: 294px;
+
+    .image {
+        display: block;
+        height: 100%;
+        width: 100%;
+        
+        object-fit: cover;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .gallery-image-thumb {
+        width: 354px;
+    }
+
+    .gallery-works {
+        @include container-flex;
+        flex-wrap: wrap;
+    }
+
+    .gallery-works-box {
+        width: calc((100% - 30px) / 2);
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .gallery-works-box {
+        &:nth-child(2n + 1) {
+            margin-right: 30px;
+        }
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .gallery-image-thumb {
+        width: 370px;
+    }
+
+    .gallery-works-box {
+        width: calc((100% - 60px) / 3);
+
+        &:not(:nth-child(3n + 3)) {
+        margin-right: 30px;
+
+        &:not(:nth-last-child(-n + 3)) {
+            margin-bottom: 30px;
+        }
+    }
+
+    }
 }
