--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,14 +1,13 @@
 .clients-list {
     @include container-flex($justify-content: center);
+    flex-wrap: wrap;
 }
+
 .clients-list-item {
-    width: calc((100% - 150px) / 6);
+    width: calc((100% - 30px) / 2);
     height: 90px;
     @include container-flex($justify-content: center);
 
-    &:not(:last-child) {
-        margin-right: 30px;
-    }
 
     &:hover {
         border-color: $accent-color; 
@@ -19,12 +18,22 @@
         border-color: $accent-color; 
         fill: $accent-color; 
     }
-}
 
+    @media screen and (max-width: 767px) {
+        &:nth-child(2n + 1) {
+            margin-right: 30px;
+        }
+    
+        &:nth-child(-n + 4) {
+            margin-bottom: 30px;
+        }
+    }
+
+}
 
 .clients-list-link {
     @include container-flex($justify-content: center, $align-items: center);
-    width: 170px;
+    width: 100%;
     height: 90px;
     
 
@@ -47,6 +56,30 @@
         border-color: $accent-color; 
         fill: $accent-color; 
     }
-    
+}
 
+@media screen and (min-width: 768px) {
+    .clients-list-item {
+        width: calc((100% - 60px) / 3);
+        margin-right: 30px;
+
+        &:nth-child(3n) {
+            margin-right: 0px;
+        }
+
+        &:nth-child(-n + 3) {
+            margin-bottom: 30px;
+        }
+    }       
+}
+
+@media screen and (min-width: 1200px) {
+    .clients-list-item {
+         width: calc((100% - 150px) / 6);
+         margin-bottom: 0px;
+
+         &:not(:last-child) {
+                margin-right: 30px;
+         }
+    }
 }
