--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,6 +1,7 @@
 .btn-primary {
     margin: 0;
     padding: 10px 32px 10px;
+    max-width: 100%;
 
     color: $dark-section-text-color;
     background-color: $accent-color;
